<resources>
    <string name="app_name">AppNetMovie</string>

    <!-- Generic Strings -->
    <string name="hint_email">E-mail:</string>
    <string name="hint_password">Password:</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_next">Next</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="text_email_empty_fragment">Digite um email válido.</string>
    <string name="text_password_empty_fragment">Digite uma senha.</string>

    <!-- Screen Onboarding Fragment -->
    <string name="btn_start">Start</string>

    <!-- Screen Home Auth Fragment -->
    <string name="text_home_auth">Let\'s you in</string>
    <string name="text_continue_with_facebook">Continue with Facebook</string>
    <string name="text_continue_with_google">Continue with Google</string>
    <string name="text_or">or</string>
    <string name="btn_sign_in_with_password">Sign in with password</string>
    <string name="text_don_t_have_an_account_sign_up">Don\'t have an account? <b><font color="#E21221"> Sign Up</font></b></string>

    <!-- Screen Register Fragment -->
    <string name="text_create_your_account">Create Your Account</string>
    <string name="text_or_continue_with">or continue with</string>

    <!-- Screen Login Fragment -->
    <string name="text_login_to_your_account">Login to Your Account</string>
    <string name="text_forgot_the_password">Forgot the password?</string>

    <!-- Screen Forgot Fragment -->
    <string name="text_create_your_new_password">Create Your New Password</string>
    <string name="text_send_email_success_forget_fragment">Email enviado com sucesso!</string>

    <!-- Errors Firebase -->
    <string name="account_not_registered_register_fragment">Não existe nenhum registo que correspondente a este usuário</string>
    <string name="invalid_email_register_fragment">O endereço de e-mail está mal formatado</string>
    <string name="invalid_password_register_fragment">A senha é inválida ou o usuário não tem uma senha</string>
    <string name="email_in_use_register_fragment">O endereço de e-mail já está sendo utilizado por outra conta</string>
    <string name="strong_password_register_fragment">A senha deve ter pelo menos 6 caracteres</string>
    <string name="access_to_this_account_has_been_temporarily_disabled">Bloqueámos todos os pedidos deste dispositivo devido a atividade anormal. Tente novamente mais tarde.</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente mais tarde.</string>

    <!--    BottomBar-->
    <string name="title_menu_home">Início</string>
    <string name="title_menu_search">Pesquisar</string>
    <string name="title_menu_favorite">Favorite</string>
    <string name="title_menu_download">Baixar</string>
    <string name="title_menu_profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>